--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ apply plugin: "com.github.ben-manes.versions"   //  ./gradlew dependencyUpdates
 
 
 group = 'cz.siret'
-version = '2.5-dev.13'
+version = '2.5'
 
 description = 'Ligand binding site prediction based on machine learning.'
 
